Fix planet alignment on multiple screens.

--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,8 @@ section.next {
 .planet {
     width: 457px;
     position: absolute;
-    bottom: 200px;
+    top: 90px;
+    left: -100px;
 }
 
 span {
